[package]
name = "cinny-tauri"
version = "1.1.2"
description = "Yet another matrix client"
authors = [ "Harsh Barsaiyan" ]
license = "GPLv3"
repository = "https://github.com/hbarsaiyan/cinny-tauri"
default-run = "cinny-tauri"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
